/*
 * Copyright (c) 2023 RobustMQ Team
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package robustmq.protocol.placement_center.journal;
import "common.proto";

service EngineService {
  //
  rpc CreateShard(CreateShardRequest) returns(robustmq.protocol.placement_center.common.CommonReply){}
 
  //
  rpc GetShard(GetShardRequest) returns(GetShardReply){}

  //
  rpc DeleteShard(DeleteShardRequest) returns(robustmq.protocol.placement_center.common.CommonReply){}

  //
  rpc CreateSegment(CreateSegmentRequest) returns(robustmq.protocol.placement_center.common.CommonReply){}

  // 
  rpc DeleteSegment(DeleteSegmentRequest) returns(robustmq.protocol.placement_center.common.CommonReply){}
}

message CreateShardRequest{
    string cluster_name = 1;
    string shard_name = 2;
    uint32 replica = 3;
}

message GetShardRequest{
    string cluster_name = 1;
    string shard_name = 2;
}

message GetShardReply{
    string cluster_name = 1;
    string shard_id = 2;
    string shard_name = 3;
    uint32 replica = 4;
    bytes replicas = 5;
    string status=6;
}

message DeleteShardRequest{
    string cluster_name = 1;
    string shard_name = 2;
}

message CreateSegmentRequest{
    string cluster_name = 1;
    string shard_name = 2;
}

message DeleteSegmentRequest{
    string cluster_name = 1;
    string shard_name = 2;
    uint64 segment_seq = 3;
}